--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@fontsource/chakra-petch": "^5.0.18",
+    "@fontsource/titillium-web": "^5.1.0",
     "@types/react-slick": "^0.23.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
